--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^8.14.0",
     "eslint-plugin-react": "^7.29.4",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "lint-staged": "^12.4.0",
     "prettier": "^2.6.2",
     "react-hot-loader": "^4.13.0",
